--- a/packaging/windows/WIXInstallers/KeybaseBundle/Bundle.wxs
+++ b/packaging/windows/WIXInstallers/KeybaseBundle/Bundle.wxs
@@ -6,8 +6,8 @@
      xmlns:netfx='http://schemas.microsoft.com/wix/NetFxExtension'
      >
   
-  <Bundle Name="Keybase $(env.KEYBASE_WINVER)" 
-          Version="$(env.KEYBASE_WINVER)" 
+  <Bundle Name="Keybase $(var.KEYBASE_WINVER)" 
+          Version="$(var.KEYBASE_WINVER)" 
           Manufacturer="Keybase, Inc." 
           UpgradeCode="418432ab-0366-40fd-a396-8cc0c4200252">
    
@@ -18,7 +18,7 @@
     <util:RegistrySearchRef Id='InnoCLIUninstall64' />
     <util:RegistrySearchRef Id='InnoKBFSUninstall' />
     <util:RegistrySearchRef Id='InnoKBFSUninstall64' />    
-    
+       
     <!--Dokan prerequisite-->
     <util:FileSearchRef Id='WINTRUST_FileSearch' />
 
@@ -38,11 +38,6 @@
     <Variable Name="DokanInstallFolder" Type="string" Value="[ProgramFiles6432Folder]Dokan\Dokan Library-1.0.0"/>
     <Variable Name="nodriver" bal:Overridable="yes" />
     <Variable Name="DevFilesCheckbox" Type="numeric" Value="0"/> <!--Do not install Dokan developer files when value set to 0-->   
-
-
-    <!-- TODO Proper detection of other Dokans installed by the user. We may need to look at Upgrade code or the signing cert-->
-    <!--The Dokan Product codes are not needed, we should be detecting Dokan (Keybase released) or other Dokan via other methods-->    
-
 
     <!--Dokan prerequisites-->
     <util:FileSearch Id="SearchSystem"
@@ -71,7 +66,19 @@
     <util:RegistrySearch Id="vcredist_2015_x64_versioncheck" Root="HKLM" Key="SOFTWARE\Classes\Installer\Dependencies\Microsoft.VS.VC_RuntimeMinimumVSU_amd64,v14" Value="Version" Variable="vcredist_2015_x64_version" Result="exists" Win64="yes"/>
     <util:RegistrySearch Id="vcredist_2015_x64_versionnumbercheck" Root="HKLM" Key="SOFTWARE\Classes\Installer\Dependencies\Microsoft.VS.VC_RuntimeMinimumVSU_amd64,v14" Value="Version" Variable="vcredist_2015_x64_versionnumber" Result="value" Win64="yes"/>
 
-    <bal:Condition Message="Installation failed because your version of Windows is too old. Dokan requires Windows 7 SP1 or newer."><![CDATA[Installed OR VersionNT > v6.1 OR (VersionNT = v6.1 AND ServicePackLevel >= 1)]]></bal:Condition>
+    <!--Detect if non-Keybase release of Dokan is installed-->
+    <!--Keybase has it's own UpgradeCode for Dokan starting with version 1.0.2 so fail if we detect version 1.0.2 and up with the old UpgradeCode on the system-->
+    <util:ProductSearch Variable="OLD_DOKAN_VERSION_CONFLICT" UpgradeCode="$(var.OldDokanUpgradeCodeX86)" Condition="NOT VersionNT64"/>
+    <util:ProductSearch Variable="OLD_DOKAN_VERSION_CONFLICT" UpgradeCode="$(var.OldDokanUpgradeCodeX64)" Condition="VersionNT64"/>
+
+    <bal:Condition 
+      Message="Installation failed because an incompatible version of Dokan is already installed. Please uninstall the existing version first, reboot the system, and start the install again.">
+      <![CDATA[NOT (OLD_DOKAN_VERSION_CONFLICT >= v1.0.2)]]>
+    </bal:Condition>
+
+    <bal:Condition Message="Installation failed because your version of Windows is too old. Dokan requires Windows 7 SP1 or newer.">
+      <![CDATA[Installed OR VersionNT > v6.1 OR (VersionNT = v6.1 AND ServicePackLevel >= 1)]]>
+    </bal:Condition>
     
     <Chain>
       <PackageGroupRef Id="NetFx40Web"/>  
@@ -223,7 +230,6 @@
                   Compressed="yes"
                   Visible="no"
                   >
-        <!--The Dokan Product codes are not needed, we should be detecting Dokan (Keybase released) or other Dokan via other methods-->
       </MsiPackage>
 
     </Chain>
